<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="dialog_options">
        <item>Skift titel</item>
        <item>Skift farve</item>
        <item>Skift ikon</item>
        <item>Kopier kategori</item>
    </string-array>
	
	<string name="app_name">Kategoriværktøjet</string>
    <string name="currentChild">Aktiv borger: </string>
    <string name="categories">Kategorier</string>
    <string name="subcategories">Underkategorier</string>
    <string name="category">kategori</string>
    <string name="subcategory">underkategori</string>
    <string name="pictograms">Pictogrammer</string>
    <string name="pressInfo">Tryk i lang tid for yderligere valgmuligheder</string>
    <string name="back">Tilbage</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_help_menu">HelpMenu</string>
    <string name="picture">Default picture content description</string>
    <string name="title_activity_admin_category">AdminCategory</string>
    <string name="title_activity_picto_main">Søg og Send</string>
    <string name="returnItem">Afslut</string>
    <string name="dialog_title">Fejl i Login</string>
    <string name="errorLogin">Ugyldige Login informationer</string>
    <string name="title_used">Den valgte titel er allerede anvendt af en anden kategori</string>
    <string name="title_missing">Mangler titel</string>
    <string name="title_used_short">Titlen er anvendt</string>
    <string name="category_color_missing">Vælg venligst en farve til kategorien</string>
    <string name="name_used">Navn er allerede brugt</string>
    <string name="search_missing">Search not installed</string>
    <string name="croc_missing">Croc not installed</string>
    <string name="create_new">Opret ny </string>
    <string name="finished">Færdig</string>
    <string name="cancel">Anuller</string>
    <string name="confirm_delete">Er du sikker på at du vil slette?</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="change_icon">Ændre icon</string>
    <string name="ok">ok</string>
    <string name="edit_category">Rediger kategori</string>
    <string name="title_change">Ændre titel</string>
    <string name="close">Luk</string>
    <string name="save_changes">Gem ændringer</string>
    <string name="change_profile">Skift profil</string>
    <string name="select_citizen">Vælg venligst en borger</string>
    <string name="auto_save">Ændringer gemmes automatisk</string>
    <string name="cannot_copy_same_citizen">Det er ikke muligt at kopiere til den samme borger</string>
    <string name="already_has_category"> har allerede en kategori med samme navn</string>
    <string name="not_implemented">Denne funktionalitet er ikke implementeret</string>
    <string name="subcat_copied">Underkategorier kopieret: </string>
    <string name="pictograms_copied">Pictogrammer kopieret: </string>
    <string name="pictosearch_unavaiable">Kunne ikke tilgå pictosearch</string>
    <string name="ask_installed">Er det installeret?</string>
    <string name="error">Fejl</string>
    <string name="category_copied">Kategorien er kopieret</string>

</resources>